--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:hint="@string/login_id_hint"
+        android:inputType="text"
+        android:nextFocusDown="@id/passwordEditBox"
         app:layout_constraintBottom_toTopOf="@id/passwordEditBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:hint="@string/login_password_hint"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
