--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,37 +10,59 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_instagram"
-        app:layout_constraintBottom_toTopOf="@id/idEditBox"
+        app:layout_constraintBottom_toTopOf="@id/clientIdEditBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idEditBox"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:hint="@string/login_id_hint"
-        android:inputType="text"
-        android:nextFocusDown="@id/passwordEditBox"
-        app:layout_constraintBottom_toTopOf="@id/passwordEditBox"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/login_id"
+        app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
+        app:layout_constraintEnd_toStartOf="@id/clientIdEditBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instagramLogo" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/passwordEditBox"
+        android:id="@+id/clientIdEditBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:hint="@string/login_password_hint"
+        android:layout_marginStart="10dp"
+        android:inputType="text"
+        android:nextFocusDown="@id/redirectUriEditBox"
+        android:text="@string/client_id"
+        app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/id"
+        app:layout_constraintTop_toBottomOf="@id/instagramLogo" />
+
+    <TextView
+        android:id="@+id/redirectUri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login_redirect_uri"
+        app:layout_constraintBottom_toTopOf="@id/loginButton"
+        app:layout_constraintEnd_toStartOf="@id/redirectUriEditBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clientIdEditBox" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/redirectUriEditBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:layout_marginStart="10dp"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:inputType="text"
+        android:text="@string/redirect_url"
         app:layout_constraintBottom_toTopOf="@id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/idEditBox" />
+        app:layout_constraintStart_toEndOf="@id/redirectUri"
+        app:layout_constraintTop_toBottomOf="@id/clientIdEditBox" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginButton"
@@ -51,6 +73,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditBox" />
+        app:layout_constraintTop_toBottomOf="@id/redirectUriEditBox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
