토큰 화면으로 이동하도록 구현

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -14,10 +14,10 @@
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -30,12 +30,23 @@
 
         <action
             android:id="@+id/action_loginFragment_to_tokenFragment"
-            app:destination="@id/tokenFragment" />
+            app:destination="@id/tokenFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
         android:id="@+id/tokenFragment"
         android:name="com.frogsm.instagram_demo.ui.token.TokenFragment"
         android:label="TokenFragment"
-        tools:layout="@layout/fragment_token" />
+        tools:layout="@layout/fragment_token">
+        <argument
+            android:name="clientId"
+            app:argType="string" />
+        <argument
+            android:name="redirectUri"
+            app:argType="string" />
+    </fragment>
 </navigation>
