--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="10dp"
-        android:inputType="text"
+        android:inputType="number"
         android:nextFocusDown="@id/redirectUriEditBox"
         app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
         app:layout_constraintEnd_toEndOf="parent"
