--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_instagram"
-        app:layout_constraintBottom_toTopOf="@id/clientIdEditBox"
+        app:layout_constraintBottom_toTopOf="@id/clientId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,9 +20,9 @@
         android:id="@+id/clientId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/login_id"
-        app:layout_constraintBottom_toTopOf="@id/clientSecretIdEditBox"
-        app:layout_constraintEnd_toStartOf="@id/clientIdEditBox"
+        app:layout_constraintBottom_toTopOf="@id/clientIdEditBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instagramLogo" />
 
@@ -30,22 +30,20 @@
         android:id="@+id/clientIdEditBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="10dp"
         android:inputType="number"
         android:nextFocusDown="@id/clientSecretIdEditBox"
-        app:layout_constraintBottom_toTopOf="@id/clientSecretIdEditBox"
+        app:layout_constraintBottom_toTopOf="@id/clientSecretId"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/clientId"
-        app:layout_constraintTop_toBottomOf="@id/instagramLogo" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clientId" />
 
     <TextView
         android:id="@+id/clientSecretId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/login_secret_id"
-        app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
-        app:layout_constraintEnd_toStartOf="@id/clientSecretIdEditBox"
+        app:layout_constraintBottom_toTopOf="@id/clientSecretIdEditBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clientIdEditBox" />
 
@@ -53,22 +51,20 @@
         android:id="@+id/clientSecretIdEditBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="10dp"
         android:inputType="text"
         android:nextFocusDown="@id/redirectUriEditBox"
-        app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
+        app:layout_constraintBottom_toTopOf="@id/redirectUri"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/clientSecretId"
-        app:layout_constraintTop_toBottomOf="@id/clientIdEditBox" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clientSecretId" />
 
     <TextView
         android:id="@+id/redirectUri"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/login_redirect_uri"
-        app:layout_constraintBottom_toTopOf="@id/loginButton"
-        app:layout_constraintEnd_toStartOf="@id/redirectUriEditBox"
+        app:layout_constraintBottom_toTopOf="@id/redirectUriEditBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clientSecretIdEditBox" />
 
@@ -76,14 +72,12 @@
         android:id="@+id/redirectUriEditBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="10dp"
         android:imeOptions="actionDone"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/redirectUri"
-        app:layout_constraintTop_toBottomOf="@id/clientSecretIdEditBox" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/redirectUri" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginButton"
