클라이언트 시크릿 아이디 넘기도록 수정

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -46,6 +46,9 @@
             android:name="clientId"
             app:argType="string" />
         <argument
+            android:name="clientSecretId"
+            app:argType="string" />
+        <argument
             android:name="redirectUri"
             app:argType="string" />
     </fragment>
