MediaCollection 화면 추가

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -35,6 +35,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_loginFragment_to_mediaCollectionFragment"
+            app:destination="@id/mediaCollectionFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
     <fragment
@@ -52,4 +60,10 @@
             android:name="redirectUri"
             app:argType="string" />
     </fragment>
+
+    <fragment
+        android:id="@+id/mediaCollectionFragment"
+        android:name="com.frogsm.instagram_demo.ui.mediacollection.MediaCollectionFragment"
+        android:label="MediaCollectionFragment"
+        tools:layout="@layout/fragment_media_collection" />
 </navigation>
