--- a/app/src/main/res/layout/item_media_collection_album.xml
+++ b/app/src/main/res/layout/item_media_collection_album.xml
@@ -16,11 +16,9 @@
         tools:src="@tools:sample/avatars" />
 
     <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_photos"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/filled_grid_album_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
