--- a/app/src/main/res/layout/item_media_collection_video.xml
+++ b/app/src/main/res/layout/item_media_collection_video.xml
@@ -16,11 +16,9 @@
         tools:src="@tools:sample/avatars" />
 
     <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:src="@android:drawable/ic_media_play"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/feed_camera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
