툴바 타이틀에 유저 이름 기입하기 위해 이전 화면에서 데이터 넘기도록 수정

--- a/app/src/main/res/layout/fragment_media_collection.xml
+++ b/app/src/main/res/layout/fragment_media_collection.xml
@@ -26,6 +26,7 @@
                 app:layout_collapseParallaxMultiplier="0" />
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@android:color/white"
