--- a/app/src/main/res/layout/layout_user_card.xml
+++ b/app/src/main/res/layout/layout_user_card.xml
@@ -13,12 +13,12 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_instagram"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@id/feed"
+        app:layout_constraintEnd_toStartOf="@id/media"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/feed"
+        android:id="@+id/media"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toTopOf="@id/userImage">
 
         <TextView
+            android:id="@+id/mediaCount"
             style="@style/ContentCountTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,7 +50,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@id/userImage"
         app:layout_constraintEnd_toStartOf="@id/following"
-        app:layout_constraintStart_toEndOf="@id/feed"
+        app:layout_constraintStart_toEndOf="@id/media"
         app:layout_constraintTop_toTopOf="@id/userImage">
 
         <TextView
