--- a/app/src/main/res/layout/fragment_media_collection.xml
+++ b/app/src/main/res/layout/fragment_media_collection.xml
@@ -45,4 +45,11 @@
         tools:itemCount="10"
         tools:listitem="@layout/item_media_collection_image" />
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
