--- a/app/src/main/res/layout/fragment_media_collection.xml
+++ b/app/src/main/res/layout/fragment_media_collection.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@android:color/white"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                tools:title="TITEL NAME" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
