미디어 아이디 상세 화면으로 넘기도록 수정

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -99,5 +99,8 @@
         <argument
             android:name="userName"
             app:argType="string" />
+        <argument
+            android:name="mediaId"
+            app:argType="string" />
     </fragment>
 </navigation>
