--- a/app/src/main/res/layout/fragment_media_detail.xml
+++ b/app/src/main/res/layout/fragment_media_detail.xml
@@ -15,11 +15,16 @@
         tools:title="TITLE NAME" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mediaList"
+        android:id="@+id/childrenList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:spanCount="1"
+        tools:itemCount="10"
+        tools:listitem="@layout/item_media_detail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
