--- a/app/src/main/res/layout/fragment_media_detail.xml
+++ b/app/src/main/res/layout/fragment_media_detail.xml
@@ -14,17 +14,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:title="TITLE NAME" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/childrenList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:spanCount="1"
-        tools:itemCount="10"
         tools:listitem="@layout/item_media_detail_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
