--- a/app/src/main/res/layout/fragment_media_detail.xml
+++ b/app/src/main/res/layout/fragment_media_detail.xml
@@ -23,4 +23,21 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:listitem="@layout/item_media_detail_image" />
 
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:ci_animator="@animator/scale_with_alpha"
+        app:ci_animator_reverse="@null"
+        app:ci_drawable="@drawable/default_radius"
+        app:ci_drawable_unselected="@drawable/darker_gray_radius"
+        app:ci_gravity="center"
+        app:ci_height="4dp"
+        app:ci_margin="4dp"
+        app:ci_orientation="horizontal"
+        app:ci_width="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/childrenList" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
