--- a/app/src/main/res/layout/fragment_media_collection.xml
+++ b/app/src/main/res/layout/fragment_media_collection.xml
@@ -51,6 +51,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        tools:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
